# Homework_7

Homework-7/: CRUD_app.py  alembic.ini  models.py  my_select.py  pyproject.toml  seed.py
Homework-7/alembic/: env.py
Homework-7/alembic/versions/: 2b164caa4c94_init.py
